--- a/404.MD
+++ b/404.MD
@@ -2,4 +2,6 @@
 ## Error 404:
 Page not found.
 You can see a list of error codes at:
-[http://twistynado.com/errorcodes](/errorcodes.MD)
+[http://twistynado.com/errorcodes](/errorcodes.MD)  
+You can go to the home page by clicking this:
+[http://twistynado.com/](/index.html)
